Add brief description.

--- a/my-pet-website.html
+++ b/my-pet-website.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Pluto The Dog</h1>
+    <h2>Brief Description</h2>
+    <p>My favourite pet as you clearly know is called Pluto. He is a yellow-orange color, medium-sized, short-haired dog with black ears.</p>
 </body>
 </html>
