Pluto's favourite toys.

--- a/my-pet-website.html
+++ b/my-pet-website.html
@@ -17,5 +17,7 @@
         <li>I usually take him to the neighbourhood park for him to interact and play with other dogs</li>
         <li>Playing fetch with his little squeaky ball is definitely one of his favourite activities</li>
     </ul>
+    <h2>Favourite Toys</h2>
+    <p>Some of Pluto's best toys to play around with are:</p>
 </body>
 </html>
