--- a/my-pet-website.html
+++ b/my-pet-website.html
@@ -19,5 +19,10 @@
     </ul>
     <h2>Favourite Toys</h2>
     <p>Some of Pluto's best toys to play around with are:</p>
+    <ol>
+        <li>Squeaky ball</li>
+        <li>Rubber bone</li>
+        <li>Fetching stick</li>
+    </ol>
 </body>
 </html>
