Add list of ventured places.

--- a/my-pet-website.html
+++ b/my-pet-website.html
@@ -24,5 +24,15 @@
         <li>Rubber bone</li>
         <li>Fetching stick</li>
     </ol>
+    <h2>Ventured Places</h2>
+    <p>The places Pluto has visted include:</p>
+    <ul>
+        <li>The neighbourhood park</li>
+        <li>Golden Gate Bridge</li>
+        <li>Disneyland</li>
+        <li>Diani Beach</li>
+        <li>Neverland</li>
+        <li>Planet Mars</li>
+    </ul>
 </body>
 </html>
