--- a/my-pet-website.html
+++ b/my-pet-website.html
@@ -7,13 +7,13 @@
     <title>Pet Website</title>
 </head>
 <body>
-    <h1>Pluto The Dog</h1>
+    <h1>Pluto The Pup</h1>
     <h2>Brief Description</h2>
     <p>My favourite pet as you clearly know is called Pluto. He is a yellow-orange color, medium-sized, short-haired dog with black ears.</p>
     <h2>Activities</h2>
     <ul>
         <li>Pluto loves it when I get to pet him often</li>
-        <li>He likes going on long adventurous walk and discovering new place</li>
+        <li>He likes going on long adventurous walk and discovering new places</li>
         <li>I usually take him to the neighbourhood park for him to interact and play with other dogs</li>
         <li>Playing fetch with his little squeaky ball is definitely one of his favourite activities</li>
     </ul>
