--- a/my-pet-website.html
+++ b/my-pet-website.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <h1>Pluto The Pup</h1>
+        <figure>
+            <img src="Images/pluto.png" alt="An orange dog called Pluto.">
+        </figure>
         <h2>Brief Description</h2>
         <p>My favourite pet as you clearly know is called Pluto. He is a yellow-orange color, medium-sized, short-haired dog with black ears.</p>
         <h2>Activities</h2>
