Add class to ordered list.

--- a/my-pet-website.html
+++ b/my-pet-website.html
@@ -23,7 +23,7 @@
         </ul>
         <h2>Favourite Toys</h2>
         <p>Some of Pluto's best toys to play around with are:</p>
-        <ol>
+        <ol class = fav_toy>
             <li>Squeaky ball</li>
             <li>Rubber bone</li>
             <li>Fetching stick</li>
